--- a/selfdrive/controls/lib/lateral_mpc_lib/SConscript
+++ b/selfdrive/controls/lib/lateral_mpc_lib/SConscript
@@ -48,13 +48,12 @@ lenv.Clean(generated_files, Dir(gen))
 
 lenv.Command(generated_files,
              ["lat_mpc.py"],
-             f"cd {Dir('.').abspath} && python3 lat_mpc.py")
+             f"cd {Dir('.').abspath} && python lat_mpc.py")
 
 lenv["CFLAGS"].append("-DACADOS_WITH_QPOASES")
 lenv["CXXFLAGS"].append("-DACADOS_WITH_QPOASES")
 lenv["CCFLAGS"].append("-Wno-unused")
-if arch != "Darwin":
-  lenv["LINKFLAGS"].append("-Wl,--disable-new-dtags")
+lenv["LINKFLAGS"].append("-Wl,--disable-new-dtags")
 lib_solver = lenv.SharedLibrary(f"{gen}/acados_ocp_solver_lat",
                                 build_files,
                                 LIBS=['m', 'acados', 'hpipm', 'blasfeo', 'qpOASES_e'])
