--- a/selfdrive/controls/lib/longitudinal_mpc_lib/SConscript
+++ b/selfdrive/controls/lib/longitudinal_mpc_lib/SConscript
@@ -58,13 +58,12 @@ lenv.Clean(generated_files, Dir(gen))
 
 lenv.Command(generated_files,
              ["long_mpc.py"],
-             f"cd {Dir('.').abspath} && python3 long_mpc.py")
+             f"cd {Dir('.').abspath} && python long_mpc.py")
 
 lenv["CFLAGS"].append("-DACADOS_WITH_QPOASES")
 lenv["CXXFLAGS"].append("-DACADOS_WITH_QPOASES")
 lenv["CCFLAGS"].append("-Wno-unused")
-if arch != "Darwin":
-  lenv["LINKFLAGS"].append("-Wl,--disable-new-dtags")
+lenv["LINKFLAGS"].append("-Wl,--disable-new-dtags")
 lib_solver = lenv.SharedLibrary(f"{gen}/acados_ocp_solver_long",
                                 build_files,
                                 LIBS=['m', 'acados', 'hpipm', 'blasfeo', 'qpOASES_e'])
